# crow

./: Cargo.toml
crow_derive/: Cargo.toml
crow_derive/src/: lib.rs
src/: cron.rs  main.rs
src/client/: channel.rs  events.rs  interactions.rs  mod.rs
src/client/listener/: commands.rs  events.rs  interactions.rs  mod.rs  verification.rs
src/client/model/: channel.rs  message.rs  user.rs
