[package]
name = "crow"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.10.0"
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_html_form = "0.2.6"
serde_json = "1.0.128"
serde_with = "3.9.0"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
crow_derive = { path = "crow_derive" }
futures = "0.3.31"

[toolchain]
channel = "nightly"
